--- a/sim/cpu_sim/Makefile
+++ b/sim/cpu_sim/Makefile
@@ -1,7 +1,7 @@
 all: cpu_sim
 
 cpu_sim: cpu_sim.cc
-	g++ -std=c++11 cpu_sim.cc -o cpu_sim
+	g++ -g -O1 -std=c++11 cpu_sim.cc -o cpu_sim
 
 .PHONY: clean
 
