sim: cpu_sim: refactor into several files, and more oo-like style

--- a/sim/cpu_sim/Makefile
+++ b/sim/cpu_sim/Makefile
@@ -1,7 +1,7 @@
 all: cpu_sim
 
-cpu_sim: cpu_sim.cc
-	clang++ -g -O1 -std=c++11 cpu_sim.cc -o cpu_sim
+cpu_sim: cpu_sim*.cc
+	clang++ -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim
 
 .PHONY: clean
 
