sim: cpu_sim: modify Makefile so a different c++ compiler can be specified on the commandline.

--- a/sim/cpu_sim/Makefile
+++ b/sim/cpu_sim/Makefile
@@ -1,7 +1,9 @@
+CPP=clang++
+
 all: cpu_sim
 
 cpu_sim: cpu_sim*.cc cpu_sim*.h
-	clang++ -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim
+	$(CPP) -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim
 
 .PHONY: clean
 
