--- a/fpga/mcpu.qsf
+++ b/fpga/mcpu.qsf
@@ -29,7 +29,7 @@ set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
 set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS ON
 set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING ON
 set_global_assignment -name ECO_REGENERATE_REPORT ON
-
+set_global_assignment -name VERILOG_MACRO "BROKEN_ASSERTS=1"
 
 
 ############################################################################
