[cpu_sim] Add a primitive debugger.

--- a/sim/cpu_sim/Makefile
+++ b/sim/cpu_sim/Makefile
@@ -3,7 +3,7 @@ CPP=clang++
 all: cpu_sim
 
 cpu_sim: cpu_sim*.cc cpu_sim*.h
-	$(CPP) -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim
+	$(CPP) -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim -lreadline
 
 cpu_sim_sdl: cpu_sim*.cc cpu_sim*.h
 	$(CPP) -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim_sdl `sdl-config --cflags --libs` -DUSE_SDL
