Some various cleanup

--- a/sim/cpu_sim/Makefile
+++ b/sim/cpu_sim/Makefile
@@ -2,10 +2,10 @@ CPP=clang++
 
 all: cpu_sim
 
-cpu_sim: cpu_sim*.cc cpu_sim*.h
+cpu_sim: cpu_sim*.cc cpu_sim*.h Makefile
 	$(CPP) -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim -lreadline
 
-cpu_sim_sdl: cpu_sim*.cc cpu_sim*.h
+cpu_sim_sdl: cpu_sim*.cc cpu_sim*.h Makefile
 	$(CPP) -g -O1 -std=c++11 cpu_sim*.cc -o cpu_sim_sdl `sdl-config --cflags --libs` -DUSE_SDL -lreadline
 
 .PHONY: clean
