--- a/MCPU_top.qsf
+++ b/MCPU_top.qsf
@@ -184,6 +184,15 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name ALLOW_REGISTER_RETIMING ON
+set_global_assignment -name REMOVE_REDUNDANT_LOGIC_CELLS OFF
+set_global_assignment -name REMOVE_DUPLICATE_REGISTERS ON
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE stp5.stp
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name MIF_FILE bootrom.mif
+set_global_assignment -name VERILOG_FILE rtl/soc/MCPU_SOC_mmio.v
 set_global_assignment -name HEX_FILE bootrom.hex
 set_global_assignment -name VERILOG_FILE rtl/core/cache/MCPU_CACHE_tlb_dummy.v
 set_global_assignment -name VERILOG_FILE rtl/core/cache/MCPU_CACHE_ic_dummy.v
@@ -208,7 +217,8 @@ set_global_assignment -name SDC_FILE MCPU_top.SDC
 set_global_assignment -name VERILOG_FILE rtl/tb/TB_MCPU_core.v
 set_global_assignment -name VERILOG_FILE rtl/lib/seg.v
 set_global_assignment -name VERILOG_FILE MCPU_top.v
-set_global_assignment -name ALLOW_REGISTER_RETIMING ON
-set_global_assignment -name REMOVE_REDUNDANT_LOGIC_CELLS OFF
-set_global_assignment -name REMOVE_DUPLICATE_REGISTERS ON
+set_global_assignment -name VERILOG_FILE MCPU_modelsim_top.v
+set_global_assignment -name HEX_FILE test.hex
+set_global_assignment -name MIF_FILE test.mif
+set_global_assignment -name VERILOG_FILE rtl/soc/uart.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
