Add support for page faults, and fix scoreboard in the case of exceptions during stalls

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,7 @@
 #	sh ./test.sh
 
 tests: $(patsubst %.ma,gen/%.txt,$(wildcard *.ma)) $(patsubst %.ma,gen/%.bin,$(wildcard *.ma))
-	for f in $(patsubst %.bin,%,$(wildcard gen/*.bin)); do echo $$f; $(core_test) $$f.bin $$f.txt; done
+	(for f in $(patsubst %.bin,%,$(wildcard gen/*.bin)); do echo $$f; $(core_test) $$f.bin $$f.txt || exit 1; done)
 
 gen/%.bin: %.ma
 	@mkdir -p bin
