--- a/fpga/mcpu.qsf
+++ b/fpga/mcpu.qsf
@@ -191,6 +191,11 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to UART_TX
 set_location_assignment PIN_M9 -to UART_RX
 set_instance_assignment -name IO_STANDARD "2.5 V" -to UART_RX
 
+# I2C
+set_location_assignment PIN_B7 -to I2C_SCL
+set_instance_assignment -name IO_STANDARD "2.5 V" -to I2C_SCL
+set_location_assignment PIN_G11 -to I2C_SDA
+set_instance_assignment -name IO_STANDARD "2.5 V" -to I2C_SDA
 
 ############################################################################
 # Pin/route configuration: LPDDR2
