--- a/fpga/mcpu.qsf
+++ b/fpga/mcpu.qsf
@@ -241,6 +241,21 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[0]
 set_location_assignment PIN_D26 -to GPIO[1]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[1]
 
+# SD
+set_location_assignment PIN_AB6 -to SD_CLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_CLK
+set_location_assignment PIN_W8 -to SD_CMD
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_CMD
+set_location_assignment PIN_U7 -to SD_DAT[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_DAT[0]
+set_location_assignment PIN_T7 -to SD_DAT[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_DAT[1]
+set_location_assignment PIN_V8 -to SD_DAT[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_DAT[2]
+set_location_assignment PIN_T8 -to SD_DAT[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_DAT[3]
+
+
 
 ############################################################################
 # Pin/route configuration: LPDDR2
