--- a/fpga/mcpu.qsf
+++ b/fpga/mcpu.qsf
@@ -240,6 +240,40 @@ set_location_assignment PIN_T21 -to GPIO[0]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[0]
 set_location_assignment PIN_D26 -to GPIO[1]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[1]
+set_location_assignment PIN_K25 -to GPIO[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[2]
+set_location_assignment PIN_E26 -to GPIO[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[3]
+set_location_assignment PIN_K26 -to GPIO[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[4]
+set_location_assignment PIN_M26 -to GPIO[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[5]
+set_location_assignment PIN_M21 -to GPIO[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[6]
+set_location_assignment PIN_P20 -to GPIO[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[7]
+set_location_assignment PIN_T22 -to GPIO[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[8]
+set_location_assignment PIN_T19 -to GPIO[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[9]
+set_location_assignment PIN_U19 -to GPIO[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[10]
+set_location_assignment PIN_U22 -to GPIO[11]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[11]
+set_location_assignment PIN_P8 -to GPIO[12]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[12]
+set_location_assignment PIN_R8 -to GPIO[13]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[13]
+set_location_assignment PIN_R9 -to GPIO[14]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[14]
+set_location_assignment PIN_R10 -to GPIO[15]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[15]
+set_location_assignment PIN_F26 -to GPIO[16]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[16]
+set_location_assignment PIN_Y9 -to GPIO[17]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[17]
+set_location_assignment PIN_G26 -to GPIO[18]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[18]
 
 # SD
 set_location_assignment PIN_AB6 -to SD_CLK
@@ -255,6 +289,19 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_DAT[2]
 set_location_assignment PIN_T8 -to SD_DAT[3]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SD_DAT[3]
 
+# Audio
+set_location_assignment PIN_C7 -to AUD_ADCLRCK
+set_instance_assignment -name IO_STANDARD "2.5 V" -to AUD_ADCLRCK
+set_location_assignment PIN_D7 -to AUD_ADCDAT
+set_instance_assignment -name IO_STANDARD "2.5 V" -to AUD_ADCDAT
+set_location_assignment PIN_G10 -to AUD_DACLRCK
+set_instance_assignment -name IO_STANDARD "2.5 V" -to AUD_DACLRCK
+set_location_assignment PIN_H10 -to AUD_DACDAT
+set_instance_assignment -name IO_STANDARD "2.5 V" -to AUD_DACDAT
+set_location_assignment PIN_D6 -to AUD_XCK
+set_instance_assignment -name IO_STANDARD "2.5 V" -to AUD_XCK
+set_location_assignment PIN_E6 -to AUD_BCLK
+set_instance_assignment -name IO_STANDARD "2.5 V" -to AUD_BCLK
 
 
 ############################################################################
